--- a/Menu/Menu/Views/Menu/Index.cshtml
+++ b/Menu/Menu/Views/Menu/Index.cshtml
@@ -17,6 +17,9 @@
                 <div class="d-flex justify-content-center">
                     @item.Price.ToString("N2") Dollars
                 </div>
+                <div class="d-flex justify-content-center">
+                    <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id">View Dish</a>
+                </div>
             </div>
         }
     </div>
